--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
-theme: not-pure-poole
+#theme: not-pure-poole
 
 # Gems
 plugins:
@@ -17,7 +17,9 @@ plugins:
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-sitemap
-  - not-pure-poole
+  - jekyll-remote-theme
+
+remote_theme: vszhub/not-pure-poole
 
 # Optimize Jekyll
 exclude:
